@@ -42,6 +42,8 @@
   also if you did not set its width
 - P4A_Error_Mask and P4A_Login_Mask do not have default widths anymore
 - Zend Framework was updated to 1.6.1
+- P4A_I18N::normalize() now has a new parameter "num_of_decimals"
+- P4A_Field::normalize() support for num_of_decimals was added
 
 3.0.3
 - P4A_Thumbnail_Generator now supports ie's pjpeg extension
